--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,16 @@
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^2.4.7",
         "symfony/framework-bundle": "7.2.*",
         "symfony/runtime": "7.2.*",
-        "symfony/yaml": "7.2.*"
+        "symfony/yaml": "7.2.*",
+        "phpunit/phpunit": "^11.5",
+        "phpstan/phpstan": "^2.0.3",
+        "phpstan/phpstan-phpunit": "^2.0.1",
+        "phpstan/phpstan-doctrine": "^2.0.1",
+        "phpstan/phpstan-symfony": "2.*",
+        "friendsofphp/php-cs-fixer": "^3.65"
     },
     "config": {
         "allow-plugins": {
@@ -56,7 +62,24 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "check-all": [
+            "@style",
+            "@quality",
+            "@test"
+        ],
+        "check-all-fix": [
+            "@style-fix",
+            "@quality",
+            "@test"
+        ],
+        "style": "php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation --using-cache=no",
+        "style-fix": "php-cs-fixer fix --config=.php-cs-fixer.dist.php",
+        "quality": "phpstan analyse -c phpstan.dist.neon --memory-limit 1G",
+        "quality-ci": "phpstan analyse -c phpstan.dist.neon --no-progress --memory-limit 1G",
+        "test": "phpunit --colors=always",
+        "test-coverage": "phpunit --colors=always --coverage-text",
+        "test-coverage-ci": "phpunit --coverage-text --colors=never --coverage-clover phpunit_clover.xml --log-junit phpunit_report.xml"
     },
     "conflict": {
         "symfony/symfony": "*"
