--- a/composer.json
+++ b/composer.json
@@ -9,19 +9,26 @@
         "php": ">=8.3.14",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.13.1",
+        "doctrine/doctrine-migrations-bundle": "^3.3.1",
+        "doctrine/orm": "^3.3",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2.4.7",
         "symfony/framework-bundle": "7.2.*",
         "symfony/runtime": "7.2.*",
-        "symfony/yaml": "7.2.*",
+        "symfony/uid": "7.2.*",
+        "symfony/yaml": "7.2.*"
+    },
+    "require-dev": {
         "phpunit/phpunit": "^11.5",
         "phpstan/phpstan": "^2.0.3",
         "phpstan/phpstan-phpunit": "^2.0.1",
         "phpstan/phpstan-doctrine": "^2.0.1",
         "phpstan/phpstan-symfony": "2.*",
-        "friendsofphp/php-cs-fixer": "^3.65"
+        "friendsofphp/php-cs-fixer": "^3.65",
+        "doctrine/doctrine-fixtures-bundle": "^3.7.1"
     },
     "config": {
         "allow-plugins": {
@@ -63,6 +70,9 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
+        "db": "php bin/console doctrine:database:create",
+        "migration": "php bin/console doctrine:migrations:migrate --no-interaction",
+        "fixtures": "php bin/console doctrine:fixtures:load --no-interaction",
         "check-all": [
             "@style",
             "@quality",
