--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -1,12 +1,8 @@
-includes:
-    - vendor/phpstan/phpstan-phpunit/extension.neon
-    - vendor/phpstan/phpstan-doctrine/extension.neon
-    - vendor/phpstan/phpstan-symfony/extension.neon
 parameters:
+    level: 6
     paths:
         - bin/
         - config/
         - public/
         - src/
         - tests/
-    level: max
