Add initial Symfony setup with required configurations
Introduced a basic Symfony framework setup by adding new files, such as `LICENSE`, `.gitignore`, configuration files, and a `composer.json` for project dependencies. These changes establish initial project structure ready for development, incorporating Symfony best practices and configuration for caching, routing, and environment settings.

--- a/src/TenantBundle/Infrastructure/Resources/config/services.yaml
+++ b/src/TenantBundle/Infrastructure/Resources/config/services.yaml
@@ -5,7 +5,7 @@ services:
         public: false
 
 #    App\TenantBundle\Domain\Repository\TenantRepositoryInterface:
-#        class: App\TenantBundle\Infrastructure\Doctrine\Repository\DoctrineTenantRepository
+#        class: App\TenantBundle\Infrastructure\Doctrine\Repository\TenantRepository
 
 #    App\TenantBundle\Infrastructure\Service\TenantContextService:
 #        arguments:
@@ -17,3 +17,8 @@ services:
 
     App\TenantBundle\Presentation\EventListener\TenantRequestListener:
         - { name: kernel.event_listener, event: kernel.request }
+
+    App\TenantBundle\Domain\Repository\TenantRepositoryInterface:
+        class: App\TenantBundle\Infrastructure\Repository\TenantRepository
+        arguments:
+            $entityManager: '@doctrine.orm.entity_manager'
